--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-i18n": "4.12.1",
     "@strapi/plugin-users-permissions": "4.12.1",
     "@strapi/strapi": "4.12.1",
-    "better-sqlite3": "8.5.0"
+    "better-sqlite3": "8.5.0",
+    "yarn": "^1.22.19"
   },
   "author": {
     "name": "A Strapi developer"
