--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,35 +1,76 @@
+# This file describes an application. You can have multiple applications
+# in the same project.
+#
+# See https://docs.platform.sh/configuration/app.html
+
 # The name of this app. Must be unique within a project.
-name: furniro-strapi
+name: app
 
-# The runtime the application uses. The 'type' key defines the base container
-# image that will be used to run the application. There is a separate base
-# container image for each primary language for the application,
-# in multiple versions. Check the JavaScript/Node.js documentation
-# (https://docs.platform.sh/languages/nodejs.html#supported-versions)
-# to find the supported versions for the 'nodejs' type.
-type: "nodejs:18"
+# The runtime the application uses. Strapi not yet suppported with NodeJS 14.
+type: nodejs:16
 
-# The following block defines a single writable directory, 'web/uploads'
-# The 'source' specifies where the writable mount is. The 'local' source
-# indicates that the mount point will point to a local directory on the
-# application container. The 'source_path' specifies the subdirectory
-# from within the source that the mount should point at.
-mounts:
-  "web/uploads":
-    source: local
-    source_path: uploads
+# Use Yarn instead of npm.
+build:
+  flavor: none
 
-# The size of the persistent disk of the application (in MB).
-disk: 2048
+# Build dependencies.
+dependencies:
+  nodejs:
+    yarn: "1.22.5"
+
+# The hooks executed at various points in the lifecycle of the application.
+hooks:
+  build: |
+    # Download dependencies and build Strapi.
+    yarn --frozen-lockfile
+    yarn build
 
 # The relationships of the application with services or other applications.
-#
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
-# side is in the form '<service name>:<endpoint name>'.
+# side is in the form `<service name>:<endpoint name>`.
 relationships:
   postgresdatabase: "dbpostgres:postgresql"
 
+# The configuration of app when it is exposed to the web.
 web:
   commands:
-    start: "npm run start"
+    start: |
+      # Production start on all environments
+        NODE_ENV=production yarn start
+
+# The size of the persistent disk of the application (in MB).
+disk: 1024
+
+# The 'mounts' describe writable, persistent filesystem mounts in the application.
+mounts:
+  # Strapi's cache directory.
+  "/.cache":
+    source: local
+    source_path: cache
+
+  # Mount .tmp file in the app folder for strapi
+  ".tmp":
+    source: local
+    source_path: app
+
+  # Mount database folder for strapi
+  "database":
+    source: local
+    source_path: database
+
+  # Give write access for extension configuration JSONs.
+  "extensions":
+    source: local
+    source_path: extensions
+
+  # Allow for media uploads at runtime.
+  "public/uploads":
+    source: local
+    source_path: uploads
+
+source:
+  operations:
+    auto-update:
+      command: |
+        curl -fsS https://raw.githubusercontent.com/platformsh/source-operations/main/setup.sh | { bash /dev/fd/3 sop-autoupdate; } 3<&0
