--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -5,7 +5,7 @@
 
 "https://www.{default}/":
   type: upstream
-  upstream: "furniro-strapi:http"
+  upstream: "app:http"
 
 "https://{default}/":
   type: redirect
