--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@ckeditor/strapi-plugin-ckeditor": "^0.0.7",
     "@strapi/plugin-graphql": "4.12.1",
     "@strapi/plugin-i18n": "4.12.1",
     "@strapi/plugin-users-permissions": "4.12.1",
     "@strapi/strapi": "4.12.1",
     "better-sqlite3": "8.5.0",
+    "custom-slug": "^2.1.1",
     "yarn": "^1.22.19"
   },
   "author": {
