--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 public/uploads/*
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.svg filter=lfs diff=lfs merge=lfs -text
